-layout bug fixed -still trying to fix docker

--- a/webapp/wiremock/src/app/components/code-editor/code-editor.component.scss
+++ b/webapp/wiremock/src/app/components/code-editor/code-editor.component.scss
@@ -1,3 +1,1 @@
-.wmTextArea ::ng-deep .ace_content {
-  padding: 7px 3px 7px 3px;
-}
+
